--- a/public/index.html
+++ b/public/index.html
@@ -16,10 +16,10 @@
     <link href='https://api.tiles.mapbox.com/mapbox-gl-js/v0.53.0/mapbox-gl.css' rel='stylesheet' />
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;400;500;700;900&display=swap" rel="stylesheet">
     <style>
-      * {
+      /* * {
         font-family: 'Roboto', sans-serif;
         margin: 0;
-      }
+      } */
       body {
         background-color: rgb(248, 245, 245)        
       }
@@ -31,8 +31,8 @@
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
     
-
-   <script src="https://unpkg.com/react/umd/react.production.min.js" crossorigin></script>
+    <script src='https://api.tiles.mapbox.com/mapbox-gl-js/v0.45.0/mapbox-gl.js'></script>
+    <script src="https://unpkg.com/react/umd/react.production.min.js" crossorigin></script>
     <script src="https://unpkg.com/react-dom/umd/react-dom.production.min.js" crossorigin></script>
     <script src="https://unpkg.com/react-bootstrap@next/dist/react-bootstrap.min.js" crossorigin></script>    
     <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
